fix: overflow main page

--- a/src/index.scss
+++ b/src/index.scss
@@ -9,7 +9,7 @@ body,
 #root {
   height: 100%;
   width: 100%;
-  // overflow-x: hidden;
+  overflow-x: hidden;
 }
 
 body {
